<resources>
    <string name="app_name">AppNews</string>
    <string name="description">Descrição</string>
    <string name="title">Titulo</string>
    <string name="source">Fonte</string>
    <string name="published_at">Publicado em:</string>
    <string name="favorite">Favoritos</string>
    <string name="search_menu">Pesquisar...</string>
    <string name="search_query_hint">Pesquise noticias pelo mundo...</string>
    <string name="article_saved_successful">Artigo salvo com sucesso!</string>
    <string name="article_delete_successful">Artigo deletado com sucesso</string>
    <string name="undo">desfazer</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favoritos</string>
    <string name="nav_search">Pesquisar</string>
    <string name="nav_news">Notícias</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="text_favorite">Nada Por aqui!</string>
    <string name="menu_favoritar">Favoritar</string>
</resources>
