<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.multsoftware.v1.appnews.ui.fragment.home.HomeFragment"
        android:label="@string/nav_home" >
        <action
            android:id="@+id/action_homeFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="br.com.multsoftware.v1.appnews.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/nav_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="br.com.multsoftware.v1.appnews.ui.fragment.search.SearchFragment"
        android:label="@string/nav_search" >
        <action
            android:id="@+id/action_searchFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/webViewFragment"
        android:name="br.com.multsoftware.v1.appnews.ui.fragment.webview.WebViewFragment"
        android:label="@string/nav_news" >
        <argument
            android:name="article"
            app:argType="br.com.multsoftware.v1.appnews.data.local.model.Article" />
    </fragment>
</navigation>