<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgNews"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlHardcoded"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgNews"
        app:layout_constraintTop_toTopOf="@id/imgNews"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/open_sans"
        android:maxLines="4"
        android:text="@string/description"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imgNews"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <TextView
        android:id="@+id/txtSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/source"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/imgNews"
        app:layout_constraintTop_toBottomOf="@id/imgNews" />

    <TextView
        android:id="@+id/txtPublishedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans"
        android:gravity="end"
        android:text="@string/published_at"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtSource"
        app:layout_constraintTop_toBottomOf="@id/txtSource" />

</androidx.constraintlayout.widget.ConstraintLayout>